liteOS-M/rust_kernel/kernel/test/los_memory_c.h

#define LOS_OK 0
typedef unsigned int UINT32;
typedef char CHAR;
typedef unsigned short UINT16;
typedef struct tagTskInfo {
  CHAR acName[32];
  UINT32 uwTaskID;
  UINT16 usTaskStatus;
  UINT16 usTaskPrio;
  void *pTaskSem;
  void *pTaskMux;
  UINT32 uwSemID;
  UINT32 uwMuxID;
  EVENT_CB_S uwEvent;
  UINT32 uwEventMask;
  UINT32 uwStackSize;
  UINT32 uwTopOfStack;
  UINT32 uwBottomOfStack;
  UINT32 uwSP;
  UINT32 uwCurrUsed;
  UINT32 uwPeakUsed;
  BOOL bOvf;
} tagTskInfo;
typedef struct tagTskInfo TSK_INFO_S;
extern UINT32 LOS_TaskPriSet(UINT32 taskID,
                             UINT16 taskPrio);
extern UINT32 LOS_CurTaskPriSet(UINT16 taskPrio);
extern UINT32 LOS_TaskYield(void);
extern UINT16 LOS_TaskPriGet(UINT32 taskID);
extern UINT32 LOS_CurTaskIDGet(void);
extern UINT32 LOS_NextTaskIDGet(void);
extern CHAR *LOS_CurTaskNameGet(void);
extern UINT32 LOS_TaskInfoGet(UINT32 taskID,
                              TSK_INFO_S *taskInfo);
extern UINT32 LOS_TaskStatusGet(UINT32 taskID,
                                UINT32 *taskStatus);
extern UINT32 LOS_TaskInfoMonitor(void);
extern UINT32 LOS_TaskSwitchInfoGet(UINT32 index,
                                    UINT32 *taskSwitchInfo);
extern UINT32 LOS_TaskPriSet(UINT32 taskID,
                             UINT16 taskPrio);
extern UINT32 LOS_CurTaskPriSet(UINT16 taskPrio);
extern UINT32 LOS_TaskYield(void);
extern UINT16 LOS_TaskPriGet(UINT32 taskID);
extern UINT32 LOS_CurTaskIDGet(void);
extern UINT32 LOS_NextTaskIDGet(void);
extern CHAR *LOS_CurTaskNameGet(void);
extern UINT32 LOS_TaskInfoGet(UINT32 taskID,
                              TSK_INFO_S *taskInfo);
extern UINT32 LOS_TaskStatusGet(UINT32 taskID,
                                UINT32 *taskStatus);
extern UINT32 LOS_TaskInfoMonitor(void);
extern UINT32 LOS_TaskSwitchInfoGet(UINT32 index,
                                    UINT32 *taskSwitchInfo);