liteOS-M/rust_kernel/kernel/test/src/include/los_task_h.rs

extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Set a task priority."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to set the priority of a specified task."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>If the set priority is higher than the priority of the current running task, task scheduling probably occurs."]
    #[doc = " </li>"]
    #[doc = " <li>Changing the priority of the current running task also probably causes task scheduling.</li>"]
    #[doc = " <li>Using the interface to change the priority of software timer task and idle task is not allowed.</li>"]
    #[doc = " <li>Using the interface in the interrupt is not allowed.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  taskID   [IN] Type #UINT32 Task ID. The task id value is obtained from task creation."]
    #[doc = " @param  taskPrio [IN] Type #UINT16 Task priority."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_TSK_PRIOR_ERROR    Incorrect task priority.Re-configure the task priority"]
    #[doc = " @retval #LOS_ERRNO_TSK_OPERATE_IDLE   Check the task ID and do not operate on the idle task."]
    #[doc = " @retval #LOS_ERRNO_TSK_ID_INVALID     Invalid Task ID"]
    #[doc = " @retval #LOS_ERRNO_TSK_NOT_CREATED    The task is not created."]
    #[doc = " @retval #LOS_OK                       The task priority is successfully set to a specified priority."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_TaskPriSet"]
    pub fn LOS_TaskPriSet(taskID: UINT32, taskPrio: UINT16) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Set the priority of the current running task to a specified priority."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to set the priority of the current running task to a specified priority."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>Changing the priority of the current running task probably causes task scheduling.</li>"]
    #[doc = " <li>Using the interface to change the priority of software timer task and idle task is not allowed.</li>"]
    #[doc = " <li>Using the interface in the interrupt is not allowed.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  taskPrio [IN] Type #UINT16 Task priority."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_TSK_PRIOR_ERROR     Incorrect task priority.Re-configure the task priority"]
    #[doc = " @retval #LOS_ERRNO_TSK_OPERATE_IDLE    Check the task ID and do not operate on the idle task."]
    #[doc = " @retval #LOS_ERRNO_TSK_ID_INVALID      Invalid Task ID"]
    #[doc = " @retval #LOS_ERRNO_TSK_NOT_CREATED     The task is not created."]
    #[doc = " @retval #LOS_OK                        The priority of the current running task is successfully set to a specified"]
    #[doc = "                                        priority."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_TaskPriGet"]
    pub fn LOS_CurTaskPriSet(taskPrio: UINT16) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Change the scheduling sequence of tasks with the same priority."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to move current task in a queue of tasks with the same priority to the tail of the queue of ready"]
    #[doc = " tasks."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>At least two ready tasks need to be included in the queue of ready tasks with the same priority. If the"]
    #[doc = " less than two ready tasks are included in the queue, an error is reported.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  None."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_TSK_ID_INVALID                    Invalid Task ID"]
    #[doc = " @retval #LOS_ERRNO_TSK_YIELD_NOT_ENOUGH_TASK         No tasks with the same priority is available for scheduling."]
    #[doc = " @retval #LOS_OK                                      The scheduling sequence of tasks with same priority is"]
    #[doc = "                                                      successfully changed."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_TaskYield() -> UINT32;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Obtain a task priority."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to obtain the priority of a specified task."]
    #[doc = ""]
    #[doc = " @attention None."]
    #[doc = ""]
    #[doc = " @param  taskID [IN] Type #UINT32 Task ID. The task id value is obtained from task creation."]
    #[doc = ""]
    #[doc = " @retval #OS_INVALID      The task priority fails to be obtained."]
    #[doc = " @retval #UINT16          The task priority."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_TaskPriSet"]
    pub fn LOS_TaskPriGet(taskID: UINT32) -> UINT16;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Obtain current running task ID."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to obtain the ID of current running task."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li> This interface should not be called before system initialized.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_TSK_ID_INVALID    Invalid Task ID."]
    #[doc = " @retval #UINT32                      Task ID."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_CurTaskIDGet() -> UINT32;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Obtain next running task ID."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to obtain the ID of next running task."]
    #[doc = ""]
    #[doc = " @attention None."]
    #[doc = ""]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_TSK_ID_INVALID    invalid Task ID."]
    #[doc = " @retval #UINT32                      task id."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_NextTaskIDGet() -> UINT32;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Obtain next running task ID."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to obtain the ID of next running task."]
    #[doc = ""]
    #[doc = " @attention None."]
    #[doc = ""]
    #[doc = ""]
    #[doc = " @retval #NULL            invalid Task name."]
    #[doc = " @retval #CHAR*           task name."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_CurTaskNameGet() -> *mut CHAR;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Obtain a task information structure."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to obtain a task information structure."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>One parameter of this interface is a pointer, it should be a correct value, otherwise, the system may be"]
    #[doc = " abnormal.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  taskID    [IN]  Type  #UINT32 Task ID. The task id value is obtained from task creation."]
    #[doc = " @param  taskInfo  [OUT] Type  #TSK_INFO_S* Pointer to the task information structure to be obtained."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_TSK_PTR_NULL        Null parameter."]
    #[doc = " @retval #LOS_ERRNO_TSK_ID_INVALID      Invalid task ID."]
    #[doc = " @retval #LOS_ERRNO_TSK_NOT_CREATED     The task is not created."]
    #[doc = " @retval #LOS_OK                        The task information structure is successfully obtained."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_TaskInfoGet(taskID: UINT32, taskInfo: *mut TSK_INFO_S) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Obtain the task status."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to obtain the task status."]
    #[doc = ""]
    #[doc = " @attention None."]
    #[doc = ""]
    #[doc = " @param  taskID     [IN] Type  #TSK_HANDLE_T Task ID."]
    #[doc = " @param  taskStatus [OUT] Type  #UINT32 Pointer to the task status to be obtained."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_TSK_PTR_NULL                    0x02000201: Null parameter."]
    #[doc = " @retval #LOS_ERRNO_TSK_ID_INVALID                  0x02000207: Invalid task ID."]
    #[doc = " @retval #LOS_ERRNO_TSK_NOT_CREATED                 0x0200020a: The task is not created."]
    #[doc = " @retval #LOS_OK                                   0: The task information structure is successfully obtained."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_TaskStatusGet(taskID: UINT32, taskStatus: *mut UINT32) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_monitor"]
    #[doc = " @brief Obtain all tasks info."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to obtain all tasks info."]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>This API can be called only after the CPU usage is initialized. Otherwise, -1 will be returned.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param None."]
    #[doc = ""]
    #[doc = " @retval #OS_ERROR           -1:all tasks info obtain failed."]
    #[doc = " @retval #LOS_OK              0:all tasks info is successfully obtained."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_monitor.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_TaskInfoMonitor"]
    pub fn LOS_TaskInfoMonitor() -> UINT32;
}
extern "C" {
    #[doc = " @ingroup  los_task"]
    #[doc = " @brief Obtain tasks switch info."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to obtain tasks switch info."]
    #[doc = ""]
    #[doc = " @attention None."]
    #[doc = ""]
    #[doc = " @param  index            [IN]  Type  #UINT32  Switch info array index."]
    #[doc = " @param  taskSwitchInfo   [OUT] Type  #UINT32* First 4 bytes is task id, and then is task name, name len is"]
    #[doc = "                                OS_TSK_NAME_LEN."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_TSK_PTR_NULL           0x02000201: Null parameter."]
    #[doc = " @retval #LOS_OK                           0: The task switch information is successfully obtained."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_task.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_TaskSwitchInfoGet(index: UINT32, taskSwitchInfo: *mut UINT32) -> UINT32;
}
